K8s/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 8000
  selector:
    name: app
status:
  loadBalancer: {}
